--- a/templates/descansoAPP.html
+++ b/templates/descansoAPP.html
@@ -22,7 +22,7 @@
 <!--IMAGEN DE INICIO-------------------------------------->
     <div id="nube">
         <img src="img/nube2.png" alt="titulo_app">
-        <h1>TOCA DESCANSAR</h1>
+        <h1>TOCA <br>DESCANSAR</h1>
 
     </div>
 
