--- a/templates/mapaMundo_pag7.html
+++ b/templates/mapaMundo_pag7.html
@@ -44,7 +44,7 @@
 
      <!-- PANTALLA RETO_3 ---------------------------->    
          
-         <button id="btn_reto3" value="reto3">RETO 3</button>
+     <!--    <button id="btn_reto3" value="reto3">RETO 3</button>-->
 
     <!-- DIV BARCO  ---------------------------->   
     <div id="barcoMeta"></div> 
