--- a/templates/pantalla2_M1.html
+++ b/templates/pantalla2_M1.html
@@ -14,7 +14,7 @@
  
 <body>
    
-    <h3>Cuenta los cañones del barco pirata</h3>
+    <h3>CUENTA LOS CAÑONES <br>DEL BARCO PIRATA</h3>
    <p>!! A este barco le faltan los cañones ¡¡<br> 
 Pulsa el botón para que vuelvan a aparecer <br>y marcanos en la tabla cuántos han salido.<br>
 
@@ -50,7 +50,7 @@ Pulsa el botón para que vuelvan a aparecer <br>y marcanos en la tabla cuántos 
         
      <!--BOTON JUEGO------------------------------------->
 
-    <button id="iniciarJuego">Iniciar Juego</button>
+    <button id="iniciarJuego">INICIAR JUEGO</button>
      
     <!--IMAGEN SOL------------------------------------->
     <img id="sol" src="/img/cloudy-7098481_1280.png" alt="">
