--- a/css/estilos_profesor.css
+++ b/css/estilos_profesor.css
@@ -1,114 +1,217 @@
-body {
-    background: rgb(32, 240, 230);
-    font-family: 'Montserrat', sans-serif;
-    letter-spacing: 3px;
-    align-items: center;
+@media ( min-width : 1024px) {
+	body {
+		background: rgb(32, 240, 230);
+		font-family: 'Montserrat', sans-serif;
+		letter-spacing: 3px;
+		align-items: center;
+	}
+
+	/*** TITULO WEB PROFE *******************************/
+	.header {
+		position: relative;
+		width: 100%;
+		text-align: center;
+		margin-top: 30px;
+		background-color: antiquewhite;
+		padding: 20px;
+	}
+	.header h1 {
+		margin: 0;
+		font-size: 50px;
+		letter-spacing: 5px;
+		width: 100%;
+	}
+	h3 {
+		position: absolute;
+		margin-top: 60px;
+		margin-left: 520px;
+		font-size: 30px;
+	}
+
+	/*** BOTON EXIT *******************************/
+	#exit {
+		width: 110px;
+		height: 100px;
+		position: absolute;
+		right: 100px;
+		top: -0px;
+		background-color: transparent;
+		border: none;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		cursor: pointer;
+	}
+	#exit img {
+		width: 100%;
+		object-fit: contain;
+		transition: transform 0.5s;
+	}
+	#exit img:hover {
+		transform: scale(1.3);
+	}
+
+	/*** MENU-FORMULARIO *******************************/
+	#form {
+		position: absolute;
+		width: 550px;
+		margin-top: 150px;
+		left: 510px;
+		border-radius: 20px;
+		font-size: 28px;
+		font-weight: bold;
+		background-color: rgba(246, 196, 34, 0.982);
+		padding: 20px;
+		box-sizing: border-box;
+	}
+	label {
+		position: absolute;
+		margin-top: 50px;
+		margin-left: 120px;
+		cursor: pointer;
+		align-items: center;
+		 transition: color 0.3s ease, background-color 0.3s ease, transform 0.3s ease;
+		
+	}
+	.option {
+		align-items: center;
+		margin-bottom: 20px;
+	}
+	.option button {
+		align-items: center;
+		background: none;
+		border: none;
+		cursor: pointer;
+		font-size: 28px;
+		font-weight: bold;
+		color: inherit;
+		padding: 0px;
+		margin: 10px 20px;
+	}
+	.option button img {
+		cursor: pointer;
+		margin-right: 20px;
+		margin-top: 20px;
+		width: 60px;
+		height: 60px;
+		transition: transform 0.3s;
+	}
+	.option button img:hover {
+		transform: scale(1.2);
+	}
+	label:hover{
+	color: #ffffff;
+	background-color: #ff8000;
+	transform: scale(1.2) 5s;
+	}
 }
 
-/*** TITULO WEB PROFE *******************************/
+/* Media para tablets entre 768px y 1023px */
+@media ( min-width : 768px) and (max-width: 1023px) {
+	body {
+		background: rgb(32, 240, 230);
+		font-family: 'Montserrat', sans-serif;
+		letter-spacing: 3px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
 
-.header {
-    position: relative; 
-    width: 100%;
-    text-align: center; 
-    margin-top: 30px;
-    background-color: antiquewhite;
-    padding: 20px;
-    
+	/*** TITULO WEB PROFE *******************************/
+	.header {
+		position: relative;
+		width: 100%;
+		text-align: center;
+		margin-top: 30px;
+		background-color: antiquewhite;
+		padding: 20px;
+	}
+	.header h1 {
+		margin: 0;
+		font-size: 30px;
+		letter-spacing: 5px;
+		width: 100%;
+	}
+	h3 {
+		position: relative;
+		margin-top: 70px;
+		font-size: 24px;
+	}
+
+	/*** BOTON EXIT *******************************/
+	#exit {
+		width: 85px;
+		height: 100px;
+		position: absolute;
+		right: 100px;
+		top: -12px;
+		background-color: transparent;
+		border: none;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		cursor: pointer;
+	}
+	#exit img {
+		width: 100%;
+		object-fit: contain;
+		transition: transform 0.5s;
+	}
+	#exit img:hover {
+		transform: scale(1.3);
+	}
+
+	/*** MENU-FORMULARIO *******************************/
+	#form {
+		position: absolute;
+		width: 400px;
+		margin-top: 250px;
+		left: 310px;
+		border-radius: 20px;
+		font-size: 22px;
+		font-weight: bold;
+		background-color: rgba(246, 196, 34, 0.982);
+		padding: 20px;
+		box-sizing: border-box;
+	}
+	label {
+		position: absolute;
+		margin-top: 35px;
+		margin-left: 130px;
+		cursor: pointer;
+		align-items: center;
+		 transition: color 0.3s ease, background-color 0.3s ease, transform 0.3s ease;
+		
+	}
+	.option {
+		align-items: center;
+		margin-bottom: 20px;
+	}
+	.option button {
+		align-items: center;
+		background: none;
+		border: none;
+		cursor: pointer;
+		font-size: 28px;
+		font-weight: bold;
+		color: inherit;
+		padding: 0px;
+		margin: 10px 20px;
+	}
+	.option button img {
+		cursor: pointer;
+		margin-right: 20px;
+		margin-top: 20px;
+		width: 50px;
+		height: 50px;
+		transition: transform 0.3s;
+	}
+	.option button img:hover {
+		transform: scale(1.2);
+	}
+	label:hover{
+	color: #ffffff;
+	background-color: #ff8000;
+	transform: scale(1.1) 5s;
+	}
 }
-
-
-.header h1 {
-	margin:0;
-    font-size: 50px;
-    letter-spacing: 5px;
-    width: 100%;
-}
-
-
-h3 {
-	position: absolute;
-	margin-top:60px;
-	margin-left:520px;
-    font-size: 30px;
-}
-
-/*** BOTON EXIT *******************************/
-#exit {
-     width: 110px; 
-    height: 100px;
-     position: absolute;
-    right: 100px;
-    top: -0px;
-    background-color: transparent;
-    border: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-}
-
-#exit img {
-    width: 100%; 
-    object-fit: contain; 
-    transition: transform 0.5s;
-}
-
-#exit img:hover{
-transform: scale(1.3);
-
-}
-
-/*** MENU-FORMULARIO *******************************/
-#form {
-	position:absolute;
-    width: 550px;
-   margin-top: 150px;
-    left: 510px;
-    border-radius: 20px;
-    font-size: 28px;
-    font-weight: bold;
-    background-color: rgba(246, 196, 34, 0.982);
-    padding: 20px;
-    box-sizing: border-box;
-}
-
-label{
-    position:absolute;
-    margin-top: 50px;
-    margin-left: 120px;
-    cursor: pointer;
-    align-items: center;
-}
-
-.option {
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-.option button {
-    align-items: center;
-    background: none;
-    border: none;
-    cursor: pointer;
-    font-size: 28px;
-    font-weight: bold;
-    color: inherit;
-    padding: 0px;
-    margin: 10px 20px;
-}
-
-.option button img {
-    cursor: pointer;
-    margin-right: 20px;
-    margin-top: 20px;
-    width: 60px; 
-    height: 60px;
-    transition: transform 0.2s; 
-    }
-    
-.option button img:hover {
-    transform: scale(1.1); 
-}
-
-
