--- a/templates/login.html
+++ b/templates/login.html
@@ -1,79 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos_login.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet"> <!-- Enlace para importar la fuente Montserrat -->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="css/estilos_login.css">
 
-    <title>LOGIN</title>
+<!-- FUENTE PARA EL TITULO -->
+<link
+	href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+	rel="stylesheet">
 
-
+<!-- BOOTSTRAP -->
+<link
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+	rel="stylesheet">
+<title>LOGIN</title>
 </head>
-<!--ESTILO PARA VALIDAR FORMULARIO -->
 
+<!--ESTILO PARA VALIDAR FORMULARIO -->
 <style>
-    :is(input, textarea):invalid {
-    background: rgba(255, 0, 0, 0.468);
-    color: black;
-    }
-    :is(input, textarea):valid {
-    background: rgba(0, 128, 0, 0.542);
-    }
-    </style>
+:is(input, textarea):invalid {
+	background: rgba(255, 0, 0, 0.468);
+	color: black;
+}
+
+:is(input, textarea):valid {
+	background: rgba(0, 128, 0, 0.542);
+}
+</style>
 
 <!--INICIO BODY -->
- 
 <body>
+	<!-- CONTENEDOR PRINCIPAL -->
+	<div class="container-fluid vh-100 d-flex flex-column justify-content-center align-items-center">
+		<!--OLAS-->
+		<div class="background">
+			<div class="wave-container">
+				<img class="wave1" src="img/olas_login.png" alt="Ola 1"> <img class="wave1" src="img/olas_login.png" alt="Ola 2">
+			</div>
+			<div class="wave-container">
+				<img class="wave2" src="img/olas_login.png" alt="Ola 3"> <img class="wave2" src="img/olas_login.png" alt="Ola 4">
+			</div>
+			<div class="wave-container">
+				<img class="wave1" src="img/olas_login.png" alt="Ola 1"> <img class="wave1" src="img/olas_login.png" alt="Ola 5">
+			</div>
+			<div class="wave-container">
+				<img class="wave2" src="img/olas_login.png" alt="Ola 3"> <img class="wave2" src="img/olas_login.png" alt="Ola 4">
+			</div>
+			<div class="wave-container">
+				<img class="wave1" src="img/olas_login.png" alt="Ola 1"> <img class="wave1" src="img/olas_login.png" alt="Ola 5">
+			</div>
+		</div>
+		<!-- / OLAS -->
 
-    <!--OLAS-->
-    <div class="background">
-        <div class="wave-container">
-            <img class="wave1" src="img/olas_login.png" alt="Ola 1">
-            <img class="wave1" src="img/olas_login.png" alt="Ola 2">
-        </div>
-        <div class="wave-container">
-            <img class="wave2" src="img/olas_login.png" alt="Ola 3">
-            <img class="wave2" src="img/olas_login.png" alt="Ola 4">
-        </div>
-        <div class="wave-container">
-            <img class="wave1" src="img/olas_login.png" alt="Ola 1">
-            <img class="wave1" src="img/olas_login.png" alt="Ola 5">
-        </div>
-        <div class="wave-container">
-            <img class="wave2" src="img/olas_login.png" alt="Ola 3">
-            <img class="wave2" src="img/olas_login.png" alt="Ola 4">
-        </div>
-        <div class="wave-container">
-            <img class="wave1" src="img/olas_login.png" alt="Ola 1">
-            <img class="wave1" src="img/olas_login.png" alt="Ola 5">
-        </div>
-    </div>
-    <!-- / OLAS------------------>
+		<div class="container d-flex flex-column justify-content-center align-items-center vh-100">
+			<img id="flag" src="img/bandera_login2.png" alt="">
 
-    <img id="flag"src="img/bandera_login2.png" alt="">
+			<!--FORMULARIO LOGIN ---------------------------->
+			<div class="container d-flex flex-column justify-content-center align-items-center mt-4">
+				<form id="form" class="w-300 w-md-50 w-lg-40">
+					<h3 class="text-center mb-4">Por favor introduce las credenciales asignadas por tu profe</h3>
 
-<!--FORMULARIO LOGIN ---------------------------->
-    <form id="form"> 
-        <h3>Por favor introduce las credenciales del alumno</h3>
+					<div class="form-group">
+						<label for="mailUser">EMAIL DEL TUTOR:</label> 
+						<input class="form-control" title='completa con el mail de tutor' type="email" name="mailUser" id="mailUser" placeholder="Tu mail de usuario" maxlength="20" required>
+					</div>
 
+					<div class="form-group">
+						<label for="passUser"> TU CONTRASEÑA:</label> 
+						<input class="form-control" title='completa con tu password' type="password" name="passUser" id="passUser"placeholder="Tu password" maxlength="10" required>
+					</div>
 
-            <label for="mailUser">TU EMAIL DE USUARIO:</label>
-            <br>
-                <input type="email" name="mailUser" id="mailUser" placeholder="Tu mail de usuario" maxlength="20" required>
-            <label for="passUser">  TU CONTRASEÑA:</label>
-              
-                <br>
-                <input type="password" name="passUser" id="passUser" maxlength="10" required>
-                <br>        <br>
+					<button class="btn btn-block" title="pulsa para verificar que eres tú" type="submit" id="botonComprobar">COMPROBAMOS</button>
+				</form>
+			</div> <!-- Cierre de form container -->
+		</div> <!-- Cierre de container principal -->
+	</div> <!-- Cierre de container-fluid -->
 
-        <button title="pulsa para verificar que eres tú" type="submit" id="botonComprobar">COMPROBAMOS</button>
-    </form>
-<!----------------------------------------------->
-
-
-<!-- ENLACE A JS-->
-<script src="/scripts/script_login.js"></script>
-
+	<!-- ENLACE A JS -->
+	<script src="/scripts/script_login.js"></script>
 </body>
 </html>
