--- a/templates/mapaMundo1_Fin.html
+++ b/templates/mapaMundo1_Fin.html
@@ -6,20 +6,9 @@
     <link rel="stylesheet" href="css/estilos_mapaM_pag5.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet"> <!-- Enlace para importar la fuente Montserrat -->
 
-    <title>MAPA_MUNDO_1</title>
+    <title>MAPA2_MUNDO_1</title>
 </head>
 
-<!--ESTILO PARA VALIDAR FORMULARIO -->
-
-<style>
-    :is(input, textarea):invalid {
-    background: rgba(255, 0, 0, 0.468);
-    color: black;
-    }
-    :is(input, textarea):valid {
-    background: rgba(0, 128, 0, 0.542);
-    }
-    </style>
 
 <!--INICIO BODY -->
  
@@ -49,13 +38,13 @@
             <button id="btn_reto1" value="reto1">RETO 1</button>
 
      
-    <!-- PANTALLA RETO_2 ---------------------------->
+    <!-- PANTALLA RETO_2 ---------------------------->i
               
             <button id="btn_reto2" value="reto2">RETO 2</button>
 
      <!-- PANTALLA RETO_3 ---------------------------->    
          
-       <!-- <button id="btn_reto3" value="reto3">RETO 3</button> -->  
+     <!--    <button id="btn_reto3" value="reto3">RETO 3</button>-->
 
     <!-- DIV BARCO  ---------------------------->   
     <div id="barcoMeta"></div> 
@@ -76,17 +65,8 @@
             Tu navegador no soporta el elemento de audio.
         </audio>
     </div>
-    
-      <!-- DIV AUDIO META ---------------------------->   
-
-    <div>
-        <audio id="audio_meta"> 
-            <source src="/audios/collect-points-190037.mp3" type="audio/mp3">
-            Tu navegador no soporta el elemento de audio.
-        </audio>
-    </div>
 
 <!-- ENLACE A JS-->
-<script src="/scripts/script_mapaAReto1.js"></script>
+<script src="/scripts/script_mapaABarco.js"></script>
 </body>
 </html>
